# team-C-edr

./: .dockerignore  .env.example  .gitattributes  .gitignore  DESIGN.md  Dockerfile.api  Dockerfile.frontend  README.md  docker-compose.yml  manage.py  nginx.conf  package-lock.json  package.json  pyproject.toml  tsconfig.json
dashboard/: app.js  index.html  styles.css
docs/: agent-shipping-runbook.md  dbdiagram-current-implementation.dbml  erd-sa-current.md  openapi.yaml  team-domain-learning-guide.md
migrations/: 20260707_deployment_lineage.sql  20260708_analysis_jobs.sql
scripts/: build_react.mjs  https_inspection_proxy.py  install_mac_agent.sh  migrate_postgres.py  run_agent_once.py  run_service.py  run_worker.py  validate_poc.py  validate_poc_checks.py  validate_poc_core_checks.py  validate_poc_paths.py  validate_poc_report_checks.py  validate_poc_service_checks.py
src/: agent_shipper.py  ai_predictor.py  api_app.py  api_context.py  api_models.py  celery_app.py  celery_tasks.py  collector_policy.py  config.py  detection_engine.py  l7_inspector.py  local_collector.py  mac_agent.py  pcap_flow.py  pipeline.py  privacy.py  report_builder.py  response_engine.py  result_writer.py  run.py  sample_loader.py  schema_migrations.py  service_analysis_jobs.py  service_api.py  service_models.py  service_store.py  service_store_counts.py  service_store_engine.py  service_store_payloads.py  service_store_rows.py  service_tasks.py  service_worker.py  siem_analyzer.py  signature_db.py  task_queue.py
tests/: test_advanced_features.py  test_agent_collector_policy.py  (+14 more)
(+29 files in other folders)
