[project]
name = "security-edr-agent-parser"
version = "0.1.0"
description = "Offline lightweight EDR agent telemetry parser with rule-based detection and a static dashboard."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "pydantic>=2.0,<3.0",
  "SQLAlchemy>=2.0,<3.0",
  "uvicorn[standard]>=0.30,<1.0",
]
