[project]
# uv가 로컬 서비스를 설치하고 실행하는 데 필요한 최소 애플리케이션 메타데이터입니다.
name = "security-edr-agent-parser"
version = "0.1.0"
description = "Offline lightweight EDR agent telemetry parser with rule-based detection and a static dashboard."
requires-python = ">=3.11"

# 런타임 의존성은 FastAPI 서비스, DB 접근, 검증, ASGI 서빙까지 포함합니다.
dependencies = [
  "fastapi>=0.115,<1.0",
  "psycopg[binary]>=3.2,<4.0",
  "pydantic>=2.0,<3.0",
  "SQLAlchemy>=2.0,<3.0",
  "uvicorn[standard]>=0.30,<1.0",
]
